plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.ssafy'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

// jar 파일 2개 생기면서 docker image build 오류를 방지
jar {
	enabled = false
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// r2dbc mysql
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	implementation 'io.asyncer:r2dbc-mysql:0.9.2'
//	implementation 'io.asyncer:r2dbc-mysql:1.1.0'

	// mysql
	implementation 'com.mysql:mysql-connector-j:8.0.33'
	// https://mvnrepository.com/artifact/io.reactivex.rxjava3/rxjava
	implementation 'io.reactivex.rxjava3:rxjava:3.1.8'

	implementation 'org.springframework.boot:spring-boot-starter-security'
	// jwt
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-gson:0.11.5'

	implementation 'org.springframework.boot:spring-boot-starter-webflux'
//	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'

//	implementation 'org.springframework:spring-messaging'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'
	testImplementation 'org.springdoc:springdoc-openapi-starter-webflux-api:2.5.0'

	implementation 'com.google.code.gson:gson:2.9.0'

	// aws
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	implementation(platform("software.amazon.awssdk:bom:2.17.122"))
	implementation("software.amazon.awssdk:s3")
	implementation("software.amazon.awssdk:netty-nio-client")

}

tasks.named('test') {
	useJUnitPlatform()
}
